--- a/src/styles/partials/_songs.scss
+++ b/src/styles/partials/_songs.scss
@@ -55,3 +55,41 @@ i.fa.fa-music.ng-binding::before {
 i.fa.fa-info-circle::before {
     padding-right: 10px;
 }
+
+table {
+  margin-top: 20px;
+  background: $mainRGBA;
+  border: 1px dashed #e9e7e7;
+    th {
+        font-size: 24px;
+        background-color: $white;
+        cursor: pointer;
+        font-family: 'Oswald', sans-serif;
+
+        &:hover {
+            color: lightblue;
+        }
+    }
+    td {
+        text-align: center;
+        font-family: monospace;
+        }
+    }
+
+    tr.td-list {
+        &:nth-child(even) {
+        background: $wheat;
+        }
+
+        &:nth-child(odd) {
+        background-color: $white;
+        }
+
+       height: 34px;
+       border-bottom: 3px solid lightblue;
+    }
+
+.song-inventory {
+    margin: 0 auto;
+    width: 50%;
+}
