--- a/templates/home.html
+++ b/templates/home.html
@@ -1,11 +1,23 @@
 <section ng-controller="FriendsController as friendsCtrl" class="login-welcome-container is-flex">
     <div ng-controller="SongsController as songsCtrl" class="login-welcome">
 
-        <h1>Welcome, {{login.getInfo()[0].userName}}!!  You currently have {{songsCtrl.allSongsArray.length}} songs in your playlist!</h1>
+        <h1>Welcome, {{login.getInfo()[0].userName}}!!  You currently have {{songsCtrl.allSongsArray.length}} songs in your playlist &amp; {{friendsCtrl.allFriendsArray.length}} friends!</h1>
 
 
-    <div class="cat-img">
-        <img src="http://www.drodd.com/images11/music-wallpaper15.jpg">
-    </div>
+        <section class="songs-table">
+            <table class='song-inventory'>
+                <tr>
+                   <th ng-click="songsCtrl.orderByField='artist'; songsCtrl.reverseSort = !songsCtrl.reverseSort">Artist</th>
+                   <th ng-click="SongsCtrl.orderByField='title'; songsCtrl.reverseSort = !songsCtrl.reverseSort">Song</th>
+                   <th ng-click="SongsCtrl.orderByField='year'; songsCtrl.reverseSort = !songsCtrl.reverseSort">Year</th>
+                 </tr>
+
+                <tr ng-repeat="song in songsCtrl.allSongsArray | orderBy: songsCtrl.orderByField: songsCtrl.reverseSort" class='td-list'>
+                    <td>{{song.artist}}</td>
+                    <td>{{song.title}}</td>
+                    <td>{{song.year}}</td>
+                </tr>
+            </table>
+        </section>
     </div>
 </section>
