--- a/src/styles/partials/_login.scss
+++ b/src/styles/partials/_login.scss
@@ -73,15 +73,15 @@
   margin: 0 auto -15px auto;
   background: #fff;
   border-radius: 100%;
-  border: 1px solid $persimmon;
-  color: #FF7052;
+  border: 1px solid wheat;
+  color: lightblue;
   font-size: 24px;
   cursor: pointer;
   box-shadow: 0px 0px 0px 7px #fff;
   transition: 0.2s ease-out;
 
   &:hover, &:focus{
-    background: $persimmon;
+    background: #9e9e9e;
     color: #fff;
     outline: 0;
   }
