made some small styling tweaks

--- a/templates/friends.html
+++ b/templates/friends.html
@@ -1,5 +1,5 @@
 <div class="login-welcome">
-    <h1>Welcome, {{login.getInfo()[0].userName}}!! You currently have {{friendsCtrl.allFriendsArray.length}} friends</h1>
+    <h1>Welcome, {{login.getInfo()[0].userName}}!! You currently have {{friendsCtrl.allFriendsArray.length}} friends!</h1>
 
     <div ng-repeat="friend in friendsCtrl.allFriendsArray" class="friends-preview">
         <div class="top-friends-container">
