--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
         <fieldset>
             <legend class="legend">Login</legend>
             <div class="input">
-                <input name="userName" type="text" ng-model="login.inputInfo.userName" placeholder="name"></input>
+                <input name="userName" type="text" ng-model="login.inputInfo.userName" placeholder="Name"></input>
                 <span><i class="fa fa-envelope-o"></i></span>
             </div>
             <div class="input">
