--- a/src/styles/partials/_songs.scss
+++ b/src/styles/partials/_songs.scss
@@ -93,3 +93,9 @@ table {
     margin: 0 auto;
     width: 50%;
 }
+
+@media only screen and (min-width: 1000px) and (max-width: 1160px)  {
+    .top-songs img {
+        width: 30%;
+    }
+}
