--- a/templates/songs-details.html
+++ b/templates/songs-details.html
@@ -2,7 +2,7 @@
     <div class="login-welcome">
         <h1>{{detailsCtrl.selectedSong.artist}}</h1>
     <div>
-    <a ng-href="{{detailsCtrl.selectedSong.img_url})"><img src="{{detailsCtrl.selectedSong.img_url}}" alt="{{detailsCtrl.selectedSong.artist}}"></a>
+    <a ng-href="{{detailsCtrl.selectedSong.img_url}}"><img src="{{detailsCtrl.selectedSong.img_url}}" alt="{{detailsCtrl.selectedSong.artist}}"></a>
     <div class="song-preview">
         <div class="preview-details-container">
             <h2>{{detailsCtrl.selectedSong.title}} : {{detailsCtrl.selectedSong.year}}</h2>
