--- a/src/styles/partials/_login.scss
+++ b/src/styles/partials/_login.scss
@@ -6,7 +6,7 @@
 
 .login{
   width: 540px;
-  margin: 100px auto 0 auto;
+  margin-top: 50px;
   background: $mainRGBA;
   border-radius: 4px;
 }
@@ -61,7 +61,7 @@
     &:focus{
       padding: 10px 5px 10px 35px;
       outline: 0;
-      border-color: $persimmon;
+      border-color: #3f1005;
     }
   }
 }
