--- a/src/styles/partials/globals/_text-headlines.scss
+++ b/src/styles/partials/globals/_text-headlines.scss
@@ -6,7 +6,7 @@ header h1 {
     h1 {
         padding-bottom: 70px;
         text-align: center;
-        font-family: 'Oswald', sans-serif;;
-        font-size: 35px;
+        font-family: 'Boogaloo', cursive;
+        font-size: 25px;
     }
 }
