--- a/src/styles/partials/globals/_variables.scss
+++ b/src/styles/partials/globals/_variables.scss
@@ -1,6 +1,8 @@
 // fonts
-@import url('https://fonts.googleapis.com/css?family=Sansita');
-@import url('https://fonts.googleapis.com/css?family=Oswald');
+@import url('https://fonts.googleapis.com/css?family=Griffy');
+@import url('https://fonts.googleapis.com/css?family=Boogaloo');
+@import url('https://fonts.googleapis.com/css?family=Indie+Flower');
+
 
 // variables
 $wheat: wheat;
