--- a/templates/songs-details.html
+++ b/templates/songs-details.html
@@ -1,9 +1,8 @@
 <section class="song-full-container">
     <div class="login-welcome">
         <h1>{{detailsCtrl.selectedSong.artist}}</h1>
-    <div>
-    <a ng-href="{{detailsCtrl.selectedSong.img_url}}"><img src="{{detailsCtrl.selectedSong.img_url}}" alt="{{detailsCtrl.selectedSong.artist}}"></a>
-    <div class="song-preview">
+    <div class='details-container'>
+    <div class="song-detail">
         <div class="preview-details-container">
             <h2>{{detailsCtrl.selectedSong.title}} : {{detailsCtrl.selectedSong.year}}</h2>
             <p>{{detailsCtrl.selectedSong.summary}}</p>
@@ -11,5 +10,9 @@
             <audio controls data-ng-src="{{detailsCtrl.selectedSong.audio}}" type="audio/mp3">
             </audio>
         </div>
+    </div>
+    <div class="song-image">
+        <a ng-href="{{detailsCtrl.selectedSong.img_url}}">
+            <img src="{{detailsCtrl.selectedSong.img_url}}" alt="{{detailsCtrl.selectedSong.artist}}"></a>
     </div>
 </section>
